--- a/seed/ui/public/colors.css
+++ b/seed/ui/public/colors.css
@@ -1,16 +1,8 @@
 :root {
-  --color-primary: #ff55ff;
-  --color-primary-level-1: #382847;
-  --color-primary-level-2: #62326d;
-  --color-primary-level-6: #ffd4ff;
-  --color-secondary: #5555ff;
-  --color-secondary-level-1: #212847;
-  --color-secondary-level-2: #2c326d;
-  --color-secondary-level-6: #e3e3ff;
-  --color-tertiary: #55ffff;
-  --color-tertiary-level-1: #214047;
-  --color-tertiary-level-2: #2c326d;
-  --color-tertiary-level-6: #e3e3ff;
+  --color-primary: #5555ff;
+  --color-primary-level-1: #212847;
+  --color-primary-level-2: #2c326d;
+  --color-primary-level-6: #e3e3ff;
   --color-positive: #53db53;
   --color-positive-level-1: #21402f;
   --color-positive-level-2: #2c6837;
@@ -24,11 +16,15 @@
   --color-negative-level-2: #623237;
   --color-negative-level-6: #ffd4d4;
   --color-foreground: #ffffff;
-  --color-foreground-level-1: #242e38;
+  --color-foreground-level-1: #162029;
   --color-foreground-level-2: #29343d;
   --color-foreground-level-3: #333e47;
   --color-foreground-level-4: #5e6d7a;
   --color-foreground-level-5: #8594a1;
   --color-foreground-level-6: #d3dee8;
   --color-background: #0e171f;
+  --color-shadows: 0px -1px 1px rgba(255, 255, 255, 0.1),
+    0 4px 8px rgba(0, 0, 0, 0.25), -12px 12.4829px 90.82px rgba(255, 0, 0, 0.2),
+    8px -5.39px 69.61px rgba(0, 255, 0, 0.2),
+    8px 7.14244px 79.34px rgba(0, 0, 255, 0.4);
 }
